versioned_docs/version-1.12.x/guides/data-management.mdx
---
title: Data Management
description: Complete guide on typical data management operations in ReductStore.
---

import CodeBlock from "@theme/CodeBlock";
import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";

<head>
  <link
    rel="canonical"
    href="https://www.reduct.store/docs/guides/data-management"
  />
</head>

# Data Management With ReductStore

ReductStore provides a set of methods to manage data in the database. This guide provides an overview of typical data management operations in ReductStore and explains how to perform them using the ReductStore SDKs or the HTTP API.

## Changing Labels

ReductStore doesn't allow you to change the contents of records, but it does allow you to change the labels of existing records.
You can add, remove or update labels for a single record or for a batch of records to avoid HTTP requests overhead.

:::note
You should send a label as an empty string to remove it.
:::

import ChangeLabelsPy from "!!raw-loader!../examples/py/src/data_management_update_labels.py";
import ChangeLabelsJs from "!!raw-loader!../examples/js/src/data_management_update_labels.mjs";
import ChangeLabelsRs from "!!raw-loader!../examples/rs/examples/data_management_update_labels.rs";
import ChangeLabelsCpp from "!!raw-loader!../examples/cpp/src/data_management_update_labels.cc";
import ChangeLabelsCurl from "!!raw-loader!../examples/curl/data_management_update_labels.sh";

<Tabs>
  <TabItem value="Python">
    <CodeBlock language="python">{ChangeLabelsPy}</CodeBlock>
  </TabItem>
  <TabItem value="JavaScript">
    <CodeBlock language="javascript">{ChangeLabelsJs}</CodeBlock>
  </TabItem>
  <TabItem value="Rust">
    <CodeBlock language="rust">{ChangeLabelsRs}</CodeBlock>
  </TabItem>
  <TabItem value="C++">
    <CodeBlock language="cpp">{ChangeLabelsCpp}</CodeBlock>
  </TabItem>
  <TabItem value="cURL">
    <CodeBlock language="bash">{ChangeLabelsCurl}</CodeBlock>
  </TabItem>
</Tabs>

## Deleting Data

The ReductStore API allows you to delete specific records from an entry, an entire entry, or an entire bucket.
You can do this using the Client SDKs, the Reduct CLI, or the HTTP API.

### Deleting Entry or Bucket

The following examples show how to delete the entire entry or the entire bucket:

import DeleteDataPy from "!!raw-loader!../examples/py/src/data_management_delete_data.py";
import DeleteDataJs from "!!raw-loader!../examples/js/src/data_management_delete_data.mjs";
import DeleteDataRs from "!!raw-loader!../examples/rs/examples/data_management_delete_data.rs";
import DeleteDataCpp from "!!raw-loader!../examples/cpp/src/data_management_delete_data.cc";
import DeleteDataCli from "!!raw-loader!../examples/cli/data_management_delete_data.sh";
import DeleteDataCurl from "!!raw-loader!../examples/curl/data_management_delete_data.sh";

<Tabs>
  <TabItem value="Python">
    <CodeBlock language="python">{DeleteDataPy}</CodeBlock>
  </TabItem>
  <TabItem value="JavaScript">
    <CodeBlock language="javascript">{DeleteDataJs}</CodeBlock>
  </TabItem>
  <TabItem value="Rust">
    <CodeBlock language="rust">{DeleteDataRs}</CodeBlock>
  </TabItem>
  <TabItem value="C++">
    <CodeBlock language="cpp">{DeleteDataCpp}</CodeBlock>
  </TabItem>
  <TabItem value="CLI">
    <CodeBlock language="bash">{DeleteDataCli}</CodeBlock>
  </TabItem>
  <TabItem value="cURL">
    <CodeBlock language="bash">{DeleteDataCurl}</CodeBlock>
  </TabItem>
</Tabs>

### Deleting Specific Records

You can remove a single record from an entry or a set of records by specifying their timestamps.

import DeleteRecordsPy from "!!raw-loader!../examples/py/src/data_management_delete_records.py";
import DeleteRecordsJs from "!!raw-loader!../examples/js/src/data_management_delete_records.mjs";
import DeleteRecordsRs from "!!raw-loader!../examples/rs/examples/data_management_delete_records.rs";
import DeleteRecordsCpp from "!!raw-loader!../examples/cpp/src/data_management_delete_records.cc";
import DeleteRecordsCurl from "!!raw-loader!../examples/curl/data_management_delete_records.sh";
import DeleteRecordsCli from "!!raw-loader!../examples/cli/data_management_delete_records.sh";

<Tabs>
  <TabItem value="Python">
    <CodeBlock language="python">{DeleteRecordsPy}</CodeBlock>
  </TabItem>
  <TabItem value="JavaScript">
    <CodeBlock language="javascript">{DeleteRecordsJs}</CodeBlock>
  </TabItem>
  <TabItem value="Rust">
    <CodeBlock language="rust">{DeleteRecordsRs}</CodeBlock>
  </TabItem>
  <TabItem value="C++">
    <CodeBlock language="cpp">{DeleteRecordsCpp}</CodeBlock>
  </TabItem>
  <TabItem value="CLI">
    <CodeBlock language="bash">{DeleteRecordsCli}</CodeBlock>
  </TabItem>
  <TabItem value="cURL">
    <CodeBlock language="bash">{DeleteRecordsCurl}</CodeBlock>
  </TabItem>
</Tabs>

### Deleting Records in a Time Range

You can delete records in a specific time range by specifying the start and end timestamps, and you can use query parameters to filter the records:

| Parameter | Description                       | Type                    | Default                                        |
| --------- | --------------------------------- | ----------------------- | ---------------------------------------------- |
| `start`   | Remove records from               | Timestamp               | The timestamp of the first record in the entry |
| `end`     | Remove records until              | Timestamp               | The timestamp of the last record in the entry  |
| `include` | Remove only records with labels   | List of key-value pairs | Disabled                                       |
| `exclude` | Remove all records without labels | List of key-value pairs | Disabled                                       |
| `each_s`  | Remove a record every S seconds   | Float                   | Disabled                                       |
| `each_n`  | Remove only every N record        | Integer                 | Disabled                                       |

The following examples show how to delete records in a specific time range:

import DeleteRecordsRangePy from "!!raw-loader!../examples/py/src/data_management_delete_query.py";
import DeleteRecordsRangeJs from "!!raw-loader!../examples/js/src/data_management_delete_query.mjs";
import DeleteRecordsRangeRs from "!!raw-loader!../examples/rs/examples/data_management_delete_query.rs";
import DeleteRecordsRangeCpp from "!!raw-loader!../examples/cpp/src/data_management_delete_query.cc";
import DeleteRecordsRangeCurl from "!!raw-loader!../examples/curl/data_management_delete_query.sh";
import DeleteRecordsRangeCli from "!!raw-loader!../examples/cli/data_management_delete_query.sh";

<Tabs>
  <TabItem value="Python">
    <CodeBlock language="python">{DeleteRecordsRangePy}</CodeBlock>
  </TabItem>
  <TabItem value="JavaScript">
    <CodeBlock language="javascript">{DeleteRecordsRangeJs}</CodeBlock>
  </TabItem>
  <TabItem value="Rust">
    <CodeBlock language="rust">{DeleteRecordsRangeRs}</CodeBlock>
  </TabItem>
  <TabItem value="C++">
    <CodeBlock language="cpp">{DeleteRecordsRangeCpp}</CodeBlock>
  </TabItem>
  <TabItem value="CLI">
    <CodeBlock language="bash">{DeleteRecordsRangeCli}</CodeBlock>
  </TabItem>
  <TabItem value="cURL">
    <CodeBlock language="bash">{DeleteRecordsRangeCurl}</CodeBlock>
  </TabItem>
</Tabs>

:::warning
Deleting records in a time range is a heavy operation and may take a long time to complete because it copies the retained records to new blocks and deletes the old ones.
:::
